# solveit-agents

./: Agents_Croissant_Agent.ipynb  Claudette_Tool_Loop.ipynb  Cosette_Agents_Croissant_Exploration.ipynb  Cosette_Tool_Loop.ipynb  index.ipynb  pyproject.nbdev.toml  pyproject.toml
ctxs/: anthropic-agents.md  anthropic-prompting.md  claudette.md  cosette-toolloop.md  cosette.md  croissant-datatypes.md  croissant.md  magentic-one.md
