[project]
name = "solveit-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claudette>=0.1.3",
    "cosette>=0.0.4",
    "fastcore>=1.7.29",
    "pyshacl>=0.30.0",
    "rdflib>=7.1.3",
    "toolslm>=0.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
